# ic-token

./: .gitignore  LICENSE  Makefile  README.md  demo.sh  dfx.json  package-set.dhall  spec.md  vessel.dhall
.github/workflows/: ci.yml
docs/: CRC32.html  OpRecord.html  Utils.html  index.html  token.html
erc20/: demo.sh  readme.md
erc20/src/: storage.mo  token.mo  types.mo
motoko/: demo.sh
motoko/auto-scale-storage/: readme.md
motoko/auto-scale-storage/src/: bucket.mo  storage.mo  token.mo
motoko/erc20/: readme.md
motoko/erc20-simple-storage/: demo.sh  readme.md
motoko/erc20-simple-storage/src/: token.mo  types.mo
motoko/erc20/src/: storage.mo  token.mo
motoko/notify/: README.md  dfx.json
motoko/notify/src/: token.mo
motoko/simple-erc20/: README.md  demo.sh
motoko/simple-erc20/src/: token.mo
motoko/src/: token.mo  types.mo
rust/: Cargo.toml  deploy.sh  dfx.json  readme.md  token.did
rust/src/: main.rs
rust/src/erc20/: readme.md  token.did
rust/src/erc20-tx-storage/: Cargo.toml  erc20-tx-storage.did
rust/src/erc20-tx-storage/src/: main.rs
rust/src/erc20/src/: token.rs
rust/src/notify/: readme.md
rust/src/notify/src/: receiver.rs  token.rs
simple-erc20/src/: token.mo
src/: CRC32.mo  History.mo  OpRecord.mo  SHA256.mo  Types.mo  Utils.mo  storage.mo  token.mo
test/: Makefile  Test.mo  package-set.dhall  vessel.dhall
token-rs/: Cargo.toml  deploy.sh  dfx.json  rust-toolchain
token-rs/src/erc20/: Cargo.toml  token.did
token-rs/src/erc20/src/: token.rs
token-rs/src/notify/: Cargo.toml
token-rs/src/notify/src/: lib.rs  receiver.rs  token.rs
