[package]
name = "erc20"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "erc20"
path = "src/token.rs"

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
ic-types = "0.1.1"
lazy_static = "1.4.0"
candid = "0.6.19"
serde = "1.0"
